unix/lang/tests/error/import_error_line_number_after.yab
#expect#---Error in import_error_line_number_after.yab, line 5: syntax error


import library2e
this does not compute :-/
